wingmate removed Blinqui added

--- a/WingMate_iOS/View Controllers/Payment/DoneVC.xib
+++ b/WingMate_iOS/View Controllers/Payment/DoneVC.xib
@@ -27,7 +27,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congratulations! Now you have full access to Wingmate." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQ0-pt-9BB">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congratulations! Now you have full access to Blinqui." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQ0-pt-9BB">
                     <rect key="frame" x="40" y="358" width="334" height="180"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="334" id="Swb-zN-tph"/>
